[gd_scene load_steps=6 format=3 uid="uid://brkrwsassy8li"]

[ext_resource type="Script" path="res://plugins/AbilityFramework/grid/ability_slot.gd" id="1_ve20e"]
[ext_resource type="Script" path="res://plugins/AbilityFramework/grid/ability_container.gd" id="1_vi2ur"]
[ext_resource type="Texture2D" uid="uid://u3jv220xv30s" path="res://plugins/AbilityFramework/textures/ability icons/fast blade.png" id="3_0w3qq"]
[ext_resource type="Script" path="res://plugins/AbilityFramework/grid/ability_rect.gd" id="4_dkfgh"]
[ext_resource type="PackedScene" uid="uid://b0k54hvw4hcqe" path="res://plugins/AbilityFramework/grid/ability_info_hover.tscn" id="8_mgjtq"]

[node name="AbilityContainer" type="VBoxContainer" node_paths=PackedStringArray("ability_slot", "ability_rect", "info_hover", "subtitle") groups=["ability_container"]]
custom_minimum_size = Vector2(64, 80)
offset_right = 64.0
offset_bottom = 94.0
size_flags_stretch_ratio = 0.0
script = ExtResource("1_vi2ur")
ability_slot = NodePath("AbilitySlot")
ability_rect = NodePath("AbilitySlot/AbilityRect")
info_hover = NodePath("AbilityInfoHover")
subtitle = NodePath("Subtitle")

[node name="AbilitySlot" type="PanelContainer" parent="." node_paths=PackedStringArray("ability_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
script = ExtResource("1_ve20e")
ability_rect = NodePath("AbilityRect")

[node name="AbilityRect" type="TextureRect" parent="AbilitySlot" node_paths=PackedStringArray("container")]
layout_mode = 2
texture = ExtResource("3_0w3qq")
script = ExtResource("4_dkfgh")
container = NodePath("../..")

[node name="AbilityInfoHover" parent="." instance=ExtResource("8_mgjtq")]
visible = false
z_index = 20
layout_mode = 2

[node name="Subtitle" type="Label" parent="."]
layout_mode = 2
text = "Readout"
